[package]
name = "cloudup"
version = "0.1.0"
authors = ["Jyri Genral <jyri.genral@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rust_decimal_macros = "1.13"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rust_decimal]
version = "1.13"
features = ["serde-float"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json"]