[package]
name = "uppermine"
version = "0.1.0"
authors = ["Jyri Genral <jyri.genral@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudup = { path = "../cloudup" }
ssh2 = "0.9"
zstd = "0.8"

[dependencies.tokio]
version = "1.6"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls", "json"]